--- a/Work on/index.html
+++ b/Work on/index.html
@@ -37,13 +37,10 @@ Useing tamplet reference form: https://templatemo.com/tm-556-catalog-z
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link nav-link-1 active" aria-current="page" href="index.html">Photos</a>
+                    <a class="nav-link nav-link-1 active" aria-current="page" href="index.html">index</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link nav-link-3" href="about.html">About</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link nav-link-4" href="contact.html">Contact</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link nav-link-4" href="">Staff page</a>
@@ -82,7 +79,7 @@ Useing tamplet reference form: https://templatemo.com/tm-556-catalog-z
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <!--Link item name in database -->
                         <h2>Name blank</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <a href="detail.html">View more</a>
                     </figcaption>                    
                 </figure>
                  <!--Blank for more information -->
@@ -97,7 +94,7 @@ Useing tamplet reference form: https://templatemo.com/tm-556-catalog-z
                     <img src="img/placeholder.png" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Name blank</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <a href="detail.html">View more</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -110,7 +107,7 @@ Useing tamplet reference form: https://templatemo.com/tm-556-catalog-z
                     <img src="img/img-05.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Name blank</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <a href="detail.html">View more</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -123,7 +120,7 @@ Useing tamplet reference form: https://templatemo.com/tm-556-catalog-z
                     <img src="img/img-06.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Name blank</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <a href="detail.html">View more</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -137,7 +134,7 @@ Useing tamplet reference form: https://templatemo.com/tm-556-catalog-z
                     <img src="img/img-01.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Name blank</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <a href="detail.html">View more</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -150,7 +147,7 @@ Useing tamplet reference form: https://templatemo.com/tm-556-catalog-z
                     <img src="img/img-02.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Name blank</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <a href="detail.html">View more</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -163,7 +160,7 @@ Useing tamplet reference form: https://templatemo.com/tm-556-catalog-z
                     <img src="img/img-07.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Name blank</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <a href="detail.html">View more</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
@@ -176,7 +173,7 @@ Useing tamplet reference form: https://templatemo.com/tm-556-catalog-z
                     <img src="img/img-08.jpg" alt="Image" class="img-fluid">
                     <figcaption class="d-flex align-items-center justify-content-center">
                         <h2>Name blank</h2>
-                        <a href="photo-detail.html">View more</a>
+                        <a href="detail.html">View more</a>
                     </figcaption>                    
                 </figure>
                 <div class="d-flex justify-content-between tm-text-gray">
